--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="main">
+    <main>
       <div class="card">
         <div class="cover">
-          <img src="" alt="">
+          <img src="" alt="" width="306px" height="288px">
         </div>
         <h2 class="title"></h2>
         <h3 class="author"></h3>
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
